Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34152

QML/V4: MinGW64 reports many warnings about potentially performance-relevant inlined functions not being visible at inlining time ( Value::isString(), QV4::Primitive::emptyValue() )

XMLWordPrintable

    • 034cc94459260ad3494eafb9672dd02eda42782f

      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0/QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlglobal_p.h:47,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0/QtQml/private/qqmlglobal_p.h:1,
                       from util\qquickapplication_p.h:47,
                       from util\qquickapplication.cpp:42:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlscript_p.h:60,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlcustomparser_p.h:58,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlcustomparser_p.h:1,
                       from util\qquickpropertychanges_p.h:46,
                       from util\qquickutilmodule.cpp:48:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlcontext_p.h:58,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlcontext_p.h:1,
                       from util\qquickanimation.cpp:48:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlproperty_p.h:61,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlproperty_p.h:1,
                       from util\qquickspringanimation.cpp:45:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlproperty_p.h:61,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlproperty_p.h:1,
                       from util\qquicksmoothedanimation.cpp:48:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4property_p.h:45:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4engine_p.h:48,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4scopedvalue_p.h:44,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4scopedvalue_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/ftw/qhashedstring_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qhashedstring_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmltypeloader_p.h:64,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlengine_p.h:58,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlengine_p.h:1,
                       from util\qquickanimationcontroller.cpp:44:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlproperty_p.h:61,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlproperty_p.h:1,
                       from util\qquickstate_p_p.h:60,
                       from util\qquickstate.cpp:42:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlproperty_p.h:61,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlproperty_p.h:1,
                       from util\qquickstate_p_p.h:60,
                       from util\qquicktransitionmanager.cpp:45:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlcontext_p.h:58,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlcontext_p.h:1,
                       from util\qquickstatechangescript.cpp:48:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const
                   ^
      In file included from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qv4value_p.h:1:0,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmldata_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlnotifier_p.h:45,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertycache_p.h:59,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlpropertycache_p.h:1,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlscript_p.h:60,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlcustomparser_p.h:58,
                       from D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/qqmlcustomparser_p.h:1,
                       from util\qquickpropertychanges_p.h:46,
                       from util\qquickpropertychanges.cpp:42:
      D:\dev\5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:62:13: warning: 'bool QV4::Value::isString() const' redeclared without dllimport attribute after being referenced with dll linkage [enabled by default]
       inline bool Value::isString() const             ^
      

      ad infinitum. As of 7.11.2013:

      5-mingw-stable\qt-mingw-stable\qtbase\include\QtQml\5.2.0\QtQml/private/.
      ./../../../../../qtdeclarative/src/qml/jsruntime/qv4value_p.h:108:18: warning: '
      static QV4::Primitive QV4::Primitive::emptyValue()' redeclared without dllimport
       attribute after being referenced with dll linkage [enabled by default]
       inline Primitive Primitive::emptyValue()
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            kleint Friedemann Kleint
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes