Move Primitive::emptyValue() to qv4value_def_p.h.

Silence MinGW-warnings:  warning: 'static QV4::Primitive
QV4::Primitive::emptyValue()' redeclared without dllimport attribute
after being referenced with dll linkage

Task-number: QTBUG-34152

Change-Id: Id6971a20f1901022ab0d1c8f1834b135c71510ae
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>
Reviewed-by: Lars Knoll <lars.knoll@digia.com>